TODO

facets

coord_equal

Include d3 plots directly in knitr html output e.g.
http://zvfak.blogspot.jp/2013/08/using-javascript-visualization.html

stop with an error when stat_bin is used to put several clickSelects
or showSelected values in the same bin!

multiple selection? ex, if 1 bin contains multiple values of
clickSelects, then can we select all of the corresponding geoms? This
would require rewriting a substantial amount of JS code, so let's just
ignore this for the time being.

2013.10.4

Bugfixes for geom_ribbon(aes(fill=variable)) and
geom_text(aes(color=variable)).

2013.9.26

Update R/JS comments from emails to Susan.

gg2animint examples are animated and interactive.

2013.8.29
Implementation of geom_hex with relevant examples and documentation.

2013.8.15
Updated package requirements (MASS, reshape2, maps)
Updated documentation to include warnings about using google chrome with animint


2013.7.29
Fix for significant digits issue with clickSelects - fixed by exporting 
as character into JSON file, then importing and converting to numerals.

Axes can now be removed for maps

2013.7.26

bugfix for animations: before, we assumed that the animation variable
takes values in 1..n, but now this is treated properly by looking at
the actual values.

make_text for quick labels.

make_*(data, ...)